# binariconstruction.github.io

./: .gitignore  .prettierignore  404.html  CNAME  CODEOWNERS  LICENSE  README copy.md  README.md  config.toml  index.html  index.json  index.xml  package-lock.json  package.json  sitemap.xml  svgo.config.js
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: Reminder-creator.yml  Reminder-notifications.yml  Stale-Bot.yml  format.yml  gh-pages.yml
about/: index.html
blog/: index.html  index.xml
blog/page/1/: index.html
blog/structural-faults/: index.html
categories/: index.html  index.xml
categories/home-maintainance/: index.html  index.xml
categories/home-maintainance/page/1/: index.html
categories/page/1/: index.html
contact/: index.html
content/: _index.md  about.md  contact.md  services.md
content/blog/: structural-faults.md
content/portfolio/: bc-01.md  bc-02.md  bc-03.md  bc-04.md
data/: about.yml  home.yml
gallery/: index.html
home-disp/: index.html
home-grid/: index.html
portfolio/: index.html  index.xml
portfolio/bc-01/: index.html
portfolio/bc-02/: index.html
portfolio/bc-03/: index.html
portfolio/bc-04/: index.html
services/: index.html
tags/: index.html  index.xml
tags/home-issues/: index.html  index.xml
tags/home-issues/page/1/: index.html
tags/page/1/: index.html
test/: index.html
themes/aster/layouts/blog/: single.html
themes/aster/layouts/partials/: mainSlider.html
themes/aster/layouts/portfolio/: single.html
tools/data-transformation/: consolidate-coverage-data.py  pyproject.toml
