[tool.poetry]
name = "data-transformation"
version = "0.1.0"
description = ""
authors = ["Daniel Souza <me@posix.dev.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
ipython = "^8.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
